# Cross-Library-Performance-Analysis-of-Fully-Homomorphic-Encryption-and-optimization

./: SEAL_scalar_log_noHEXL.csv  SEAL_vector_log_HEXL.csv  SEAL_vector_log_noHEXL.csv  scalar_benchmark.cpp
HElib/with_HEXL/: CMakeLists.txt  different.cpp  rotation.cpp  scalar_experiment.cpp
HElib/with_HEXL/Results/: HElib_scalar_log_HEXL.csv  HElib_vector_log_HEXL.csv
HElib/without_HEXL/: CMakeLists.txt  polydegree_p_depth_eval.cpp  same2.cpp  vector_experiment.cpp
HElib/without_HEXL/Results/: HElib_scalar_log_noHEXL.csv  HElib_vector_log_noHEXL.csv
Pyfhel/: scalar_benchmark.py  vector_benchmark.py
Pyfhel/Results/: scalar_benchmark_full.csv  vector_benchmark_full.csv
pyfhel/: depth_cipher+cipher.py  depth_cipher+plain.py  depth_cipherxcipher.py  depth_cipherxplain.py  different.py  noise_cipher+cipher.py  rotation.py  same.py
seal_/: depth_cipher+cipher.cpp  depth_cipher+plain.cpp  depth_cipherxcipher.cpp  depth_cipherxplain.cpp  different.cpp  noise_cipher+cipher.cpp  noise_cipherxcipher.cpp  rotation.cpp  same.cpp  vector_benchmark.cpp
seal_/Results/: SEAL_scalar_log_HEXL.csv
